jac2020/classes/ParseXML/ParseXML.err
C:\ArchitectsCompanion\jac2017\classes\ParseXML\ParseXML.java:20: error: illegal start of type
public class ParseXML extends  {
                               ^
1 error
